# Concurrent-Distributed-Programming

./: .gitignore  CMakeLists.txt  README.md  README.rst  build.sh  setup.py
DiffusionEquation/: DiffusionEquation.py
Diffusion_Equations/: DiffusionEquation.py
data/performance/: OpenMP.csv  OpenMP_CUDA_EduardoNotebook.csv  OpenMP_EduardoDesktop.csv  OpenMP_Relatorio.csv
data/performance/final_report/: metrics_All_EduardoNotebook.csv  times_All_EduardoNotebook.csv
data/performance/report1/: OpenMP_Relatorio1.csv
data/performance/report2/: metrics_CUDA_EduardoNotebook.csv  times_CUDA_EduardoNotebook.csv  times_OMP_EduardoNotebook.csv
data/performance/report3/: cuda.txt  metrics_MPI_EduardoNotebook.csv  mpi_1.txt  mpi_16.txt  mpi_2.txt  mpi_32.txt  mpi_4.txt  mpi_8.txt  omp_4.txt  seq.txt  times_MPI_EduardoNotebook.csv
diffusion/: __init__.py  base_solution.py  cuda.py  equation.py  omp.py  sequential.py
docs/: README.md  main.aux  main.fdb_latexmk  main.fls  main.tex
inc/: cuda_utils.h  diff_eq.h  sequential.h  utils.h
notebooks/: analysis.ipynb  create_2x2_image.ipynb  create_heatmap.ipynb  plot_concentration.ipynb  requirements.txt  validate_models.ipynb
scripts/: run_simulations.py  run_simulations.sh
src/: cuda.cu  cuda_for_python.cu  mpi.c  omp.c  sequential.c  utils.c
test/: test_diffusion.py
